fix: light mode input color is not visible

--- a/src/pages/Products.css
+++ b/src/pages/Products.css
@@ -6,3 +6,9 @@ button {
   width: 100%;
   height: 100%;
 }
+
+@media (prefers-color-scheme: light) {
+  button {
+    background-color: #90bdba;
+  }
+}
